# cotm32

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  package-lock.json  package.json
as/: boot.ld  boot.s  link.ld  prog.s
rtl/: cotm32.sv  cotm32_pipeline_pkg.sv  cotm32_pkg.sv  cotm32_priv_pkg.sv
rtl/comp/: dec.sv  mux.sv
rtl/cpu/: alu.sv  cotm32.sv  inst_mem.sv  processor_core.sv
rtl/cpu/core/: cu.sv  data_mem.sv  inst_fetch.sv  inst_mem.sv  lsu.sv  mu.sv  register_file.sv  rodata_mem.sv  rom.sv  sign_ext.sv
rtl/cpu/core/register/: register.sv  register_file.sv  register_wport.sv
rtl/cpu/pipeline/: exmem_reg.sv  fwd_unit.sv  hazard_unit.sv  idex_reg.sv  ifid_reg.sv  memwb_reg.sv
rtl/cpu/priv/: csr_file.sv  exception_dispatch.sv  interrupt_dispatch.sv  priv_control.sv  trap_control.sv  trap_dispatch.sv  wfi.sv
rtl/include/: assert.svh  defs.svh  defs_rv32i.svh
rtl/peripheral/: clint.sv
rtl/peripheral/uart/: uart_term.sv
sim/: main.cpp
sim/include/: colors.hpp  compare.hpp  cotm32_defs.hpp  imgui_layer.hpp  imgui_renderer.hpp  load_elf.hpp  name_utils.hpp  sdl_window.hpp  simulator.hpp  verilated_container.hpp  vtop_adapter.hpp
sim/include/controllers/: dump_controller.hpp  term_controller.hpp  time_controller.hpp
sim/include/drawers/: clint_drawer.hpp  csr_drawer.hpp  draw_utils.hpp  dump_drawer.hpp  fwd_drawer.hpp  mem_drawer.hpp  pipeline_regs_drawer.hpp  reg_drawer.hpp  sidebar.hpp  status_drawer.hpp  term_drawer.hpp  time_drawer.hpp  trap_drawer.hpp
sim/include/struct/: ring_buffer.hpp
sim/include/views/: clint_view.hpp  csr_view.hpp  fwd_view.hpp  mem_view.hpp  pipeline_regs_view.hpp  reg_view.hpp  status_view.hpp  trap_view.hpp
sim/src/: imgui_layer.cpp  imgui_renderer.cpp  load_elf.cpp  main.cpp  name_utils.cpp  sdl_window.cpp  simulator.cpp  verilated_container.cpp  vtop_adapter.cpp
sim/src/controllers/: dump_controller.cpp  term_controller.cpp  time_controller.cpp
sim/src/drawers/: clint_drawer.cpp  csr_drawer.cpp  draw_utils.cpp  dump_drawer.cpp  fwd_drawer.cpp  mem_drawer.cpp  pipeline_regs_drawer.cpp  reg_drawer.cpp  sidebar.cpp  status_drawer.cpp  term_drawer.cpp  time_drawer.cpp  trap_drawer.cpp
sim/src/views/: clint_view.cpp  csr_view.cpp  fwd_view.cpp  mem_view.cpp  pipeline_regs_view.cpp  reg_view.cpp  status_view.cpp  trap_view.cpp
src/: cotm32_pkg.sv  cotm32_priv_pkg.sv
src/comp/: dec.sv  mux.sv
src/cpu/: alu.sv  bu.sv  cu.sv  dmem.sv  inst_mem.sv  lsu.sv  processor_core.sv  prog_ctr.sv  register_file.sv  sign_ext.sv
src/cpu/core/: alu.sv  bu.sv  cu.sv  data_mem.sv  inst_fetch.sv  inst_mem.sv  lsu.sv  prog_ctr.sv  register_file.sv  rodata_mem.sv  sign_ext.sv
src/cpu/core/register/: register_file.sv  register_rport.sv
src/cpu/priv/: csr.sv  csr_file.sv  trap_control.sv  trap_dispatch.sv
sw/boot/: boot.ld  boot.s  exc.s  func.s  interr.s  sys.s  trap.s
sw/bootc/: bool.h  clint.h  context.c  context.h  context.s  csr.h  entry.c  entry.s  int.h  linker.ld  main.c  panic.h  trap_entry.s  trap_handler.c
sw/bootc/kernel/: heap.c  heap.h  kernel.c  kernel.h  scheduler.c  scheduler.h  stack.c  stack.h  task.c  task.h
sw/bootc/lib/: cstr.c  cstr.h
sw/bootc/priv/: enums.h  priv.c  priv.h
sw/bootc/sys/: enums.h  ksys.c  ksys.h  ksys_dispatch.c  ksys_dispatch.h
sw/bootc/trap/: enums.h  frame.h  trap.h
sw/bootc/user/: entry.c  main.c  syscall.c  syscall.h  user.c
sw/include/: macros.inc  mmr.inc  sys.inc
test/: cotm32_test_pkg.sv
test/comp/: tb_dec.sv
test/cotm32/: tb_alu.sv  tb_bu.sv  tb_inst_mem.sv  tb_register_file.sv  tb_sign_ext.sv
test/cpu/: tb_alu.sv  tb_bu.sv  tb_dmem.sv  tb_inst_mem.sv  tb_lsu.sv  tb_processor_core.sv  tb_register_file.sv  tb_sign_ext.sv
